--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+
+@import url('https://fonts.googleapis.com/css?family=Lobster');
+@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display');
+
+
 /*Universal Styles*/
 .container-fluid{
   padding: 0;
@@ -95,4 +101,46 @@ nav.navbar{
 .main_img3{
   background-image:url('../img/farm-2.jpg');
 }
+
+
 /*End Carousel*/
+
+/*start my story*/
+
+#our_story{
+  min-height: 600px;
+
+}
+
+.our_story_row{
+  margin-top:30px;
+}
+
+.our_story{
+  font-family: "Lobster", sans-serif;
+  color: #f8512f;
+  font-size:6em;
+  text-shadow: 1px 1px 5px #0a0a0a;
+}
+
+.one_man{
+  font-family: "Raleway", sans-serif;
+  font-weight:700;
+  font-size:2em;
+  margin-top:0;
+}
+
+.story-year{
+  font-weight:700px;
+  font-size:150px;
+  z-index: -10000;
+  position:absolute;
+  color: rgba(149, 147,147, .2);
+  font-family: 'Playfair Display', serif;
+  margin-top: 0px;
+}
+
+#our_story p{
+  font-family: 'Raleway' sans-serif;
+  font-weight: 300;
+}
